--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,8 +1,4 @@
-# 优化低配置电脑的构建设置
-org.gradle.jvmargs=-Xmx1536M -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-org.gradle.parallel=false
-org.gradle.configureondemand=false
-org.gradle.daemon=false
+org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableR8=false
+android.enableR8=true
