修复Flutter测试和编译错误
- 修复所有FluentSystemIcons图标引用错误，替换为Material Design Icons
- 修复NLP Service和Transaction Service测试失败问题
- 修复Statistics页面语法错误和上下文变量未定义问题
- 移除fluentui_icons依赖，添加material_design_icons_flutter
- 创建测试辅助工具test_helper.dart
- 修复所有Dart语法规范问题
- 确保代码符合Flutter最佳实践

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,10 +62,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   
-  # assets:
-  #   - assets/images/
-  #   - assets/animations/
-  #   - assets/icons/
+  assets:
+    - assets/images/
+    - assets/animations/
+    - assets/icons/
   
   # fonts:
   #   - family: SF Pro Display
